fix v-alignment of page-related tables (bottom)

--- a/skins/dragon/screen.css
+++ b/skins/dragon/screen.css
@@ -413,6 +413,7 @@ table#pageHead th,
 table#pageHead td {
    border: 0px solid red;
    padding: 4px;
+   vertical-align: middle;
 }
 
 table#pageFoot a,
